; ModuleID = '/home/carl/AnghaBench/radare2/libr/io/p/extr_io_r2pipe.c___open.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/io/p/extr_io_r2pipe.c___open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@r_io_plugin_r2pipe = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*, i32, i32)* @__open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @__open(i32* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store i32* null, i32** %9, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i64 @__check(i32* %10, i8* %11, i32 0)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %4
  %15 = load i8*, i8** %6, align 8
  %16 = getelementptr inbounds i8, i8* %15, i64 9
  %17 = call i32* @r2pipe_open(i8* %16)
  store i32* %17, i32** %9, align 8
  br label %18

18:                                               ; preds = %14, %4
  %19 = load i32*, i32** %9, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %21, label %28

21:                                               ; preds = %18
  %22 = load i32*, i32** %5, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* %8, align 4
  %26 = load i32*, i32** %9, align 8
  %27 = call i32* @r_io_desc_new(i32* %22, i32* @r_io_plugin_r2pipe, i8* %23, i32 %24, i32 %25, i32* %26)
  br label %29

28:                                               ; preds = %18
  br label %29

29:                                               ; preds = %28, %21
  %30 = phi i32* [ %27, %21 ], [ null, %28 ]
  ret i32* %30
}

declare dso_local i64 @__check(i32*, i8*, i32) #1

declare dso_local i32* @r2pipe_open(i8*) #1

declare dso_local i32* @r_io_desc_new(i32*, i32*, i8*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
